// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`science-sim + studio render goldens > renders + pins a digest for a11yAuditor [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 35,
  "paths": 0,
  "selects": 0,
  "sha": "7c9fbd625a31af58",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for anatomy [ssr] 1`] = `
{
  "buttons": 66,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 164,
  "paths": 0,
  "selects": 0,
  "sha": "ec23ac2c5e6a49cf",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for archStudio [ssr] 1`] = `
{
  "buttons": 83,
  "canvases": 0,
  "inputs": 2,
  "lengthBucket": 128,
  "paths": 0,
  "selects": 0,
  "sha": "a7a197acea5e11b4",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for artStudio [ssr] 1`] = `
{
  "buttons": 24,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 40,
  "paths": 0,
  "selects": 0,
  "sha": "92c6d1c7ae3b1d4d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for astronomy [mount] 1`] = `
{
  "buttons": 17,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 54,
  "paths": 0,
  "selects": 0,
  "sha": "07f3945b549bb56a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bakingScience [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 55,
  "paths": 0,
  "selects": 0,
  "sha": "00fe29c54672b741",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bridgeLab [mount] 1`] = `
{
  "buttons": 24,
  "canvases": 0,
  "inputs": 7,
  "lengthBucket": 205,
  "paths": 3,
  "selects": 0,
  "sha": "6052a777984e06f5",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cell [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 73,
  "paths": 0,
  "selects": 0,
  "sha": "b5edf3e0bbac7db3",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for chemBalance [ssr] 1`] = `
{
  "buttons": 40,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 78,
  "paths": 0,
  "selects": 0,
  "sha": "d653baa8ea47d3c5",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cyberDefense [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 53,
  "paths": 0,
  "selects": 0,
  "sha": "e8499663e095e00f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echoTrainer [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 120,
  "paths": 2,
  "selects": 0,
  "sha": "42587b52d0bd5011",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echolocation [ssr] 1`] = `
{
  "buttons": 10,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 47,
  "paths": 0,
  "selects": 0,
  "sha": "c5fdcd7f70bddaeb",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for epidemicSim [ssr] 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 445,
  "paths": 6,
  "selects": 0,
  "sha": "72855760fcfcdfa1",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for fireEcology [ssr] 1`] = `
{
  "buttons": 29,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 113,
  "paths": 0,
  "selects": 0,
  "sha": "a5ff7965fd681d56",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for flightSim [ssr] 1`] = `
{
  "buttons": 45,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 190,
  "paths": 0,
  "selects": 2,
  "sha": "3b6fe982a79d3ba1",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for galaxy [ssr] 1`] = `
{
  "buttons": 30,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 110,
  "paths": 4,
  "selects": 0,
  "sha": "ebd2ec75a3e6cdf1",
  "svgs": 3,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for gameStudio [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 233,
  "paths": 0,
  "selects": 2,
  "sha": "84b36f01119211ea",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for kitchenLab [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 192,
  "paths": 0,
  "selects": 0,
  "sha": "57f9cc3ec2131936",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for microbiology [mount] 1`] = `
{
  "buttons": 14,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 210,
  "paths": 0,
  "selects": 0,
  "sha": "83f030f0185bb15a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for molecule [ssr] 1`] = `
{
  "buttons": 98,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 154,
  "paths": 0,
  "selects": 0,
  "sha": "35bbbbf360576d7e",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for moonMission [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 4,
  "lengthBucket": 66,
  "paths": 0,
  "selects": 0,
  "sha": "37cfb04c3ba5b072",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for physics [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 9,
  "lengthBucket": 86,
  "paths": 0,
  "selects": 0,
  "sha": "9e20f6fa5e421664",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for punnett [ssr] 1`] = `
{
  "buttons": 24,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 82,
  "paths": 2,
  "selects": 4,
  "sha": "f74cae8558404eb3",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rockCycle [ssr] 1`] = `
{
  "buttons": 13,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 28,
  "paths": 0,
  "selects": 1,
  "sha": "10a3f87b3898bf2d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rocks [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 30,
  "paths": 0,
  "selects": 0,
  "sha": "9c8abc0c8505483f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for semiconductor [mount] 1`] = `
{
  "buttons": 61,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 44,
  "paths": 0,
  "selects": 0,
  "sha": "6d943e68c04c5589",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for spaceExplorer [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 58,
  "paths": 0,
  "selects": 0,
  "sha": "f30d37df58533a9b",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for swimLab [ssr] 1`] = `
{
  "buttons": 12,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 68,
  "paths": 0,
  "selects": 0,
  "sha": "eaca76b79184fece",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for throwlab [ssr] 1`] = `
{
  "buttons": 53,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 232,
  "paths": 0,
  "selects": 0,
  "sha": "70a11019d57a23bc",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for titrationLab [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 59,
  "paths": 0,
  "selects": 0,
  "sha": "0406e1a84a738883",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for waterCycle [ssr] 1`] = `
{
  "buttons": 18,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 89,
  "paths": 0,
  "selects": 0,
  "sha": "ddb473ad380f64f7",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for wave [mount] 1`] = `
{
  "buttons": 68,
  "canvases": 1,
  "inputs": 8,
  "lengthBucket": 144,
  "paths": 0,
  "selects": 0,
  "sha": "c4be54d039a678a5",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for weldLab [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 170,
  "paths": 0,
  "selects": 0,
  "sha": "97da90b21693dc1f",
  "svgs": 0,
}
`;
